src/objects/Serial_Number__c/fields/Aging_Days__c.field-meta.xml
<CustomField>
    <fullName>Aging_Days__c</fullName>
    <formula>(5*(FLOOR(( IF(ISBLANK(RMA_Completion_Date_Text__c),If( FAFV_Status__c = &apos;Completed&apos;, FA_FV_Completion_Date__c , TODAY() ),RMA_Completion_Date_Text__c) -DATE(1900,1,8))/7))+MIN(5,MOD(IF(ISBLANK(RMA_Completion_Date_Text__c),If( FAFV_Status__c = &apos;Completed&apos;, FA_FV_Completion_Date__c , TODAY() ),RMA_Completion_Date_Text__c)-DATE(1900,1,8),7)))-(5*(FLOOR((Received_Date__c-DATE(1900,1,8))/7))+MIN(5,MOD(Received_Date__c-DATE(1900,1,8),7)))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>