src/objects/Serial_Number__c/fields/RMA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_End_Date__c</fullName>
    <formula>If( FAFV_Status__c = &apos;Completed&apos;,  RMA_Completion_Date__c  , TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>RMA End date is the latest date between FV and FA completion dates.</inlineHelpText>
    <label>RMA End Date</label>
    <type>Date</type>
</CustomField>