src/objects/Serial_Number__c/listViews/My_Serial_Numbers.listView-meta.xml
<ListView>
    <fullName>My_Serial_Numbers</fullName>
    <columns>NAME</columns>
    <columns>Actual_Ship_Date__c</columns>
    <columns>BU__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_is_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Serial Numbers</label>
</ListView>